--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53,3 +53,10 @@
     position: relative;
     left: 40%;
 }
+
+.data-in-input {
+    border: none;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+}
