--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,39 +4,33 @@
     box-sizing: border-box;
 }
 
-.main {
-    max-width: 100vw;
+body {
     height: 100vh;
-    padding: 100px 150px;
+    width: 100vw;
     background-color: rgb(136, 131, 131);
 }
 
-.main .screen {
+.screen {
+    width: 100%;
+    height: 90%;
+    padding: 40px 100px 0;
     display: flex;
-    justify-content: space-around;
-    gap: 60px;
-    height: 70vh;
+    grid-template-columns: 1fr 1fr;
+    padding-left: 300px;
+    gap: 30px;
 }
 
-.main .screen .sys {
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content:start;
-    height: 70vh;
-    width: 300px;
-}
-
-.main .screen .address {
+.screen .address {
     display: flex;
     flex-direction: column;
     padding: 0;
     background-color: white;
-    height: 300px;
-    width: 400px;
+    height: 100%;
+    width: 300px;
+    display: none;
 }
 
-.main .screen .address .address-line {
+.screen .address .address-line {
     width: 300px;
     margin: 0 0 5px 30px;
     display: flex;
@@ -44,16 +38,18 @@
     justify-content: space-around;
 }
 
-.main .screen .console {
-    height: 300px;
-    width: 400px;
+.screen .sys .console {
+    height: 35%;
+    width: 100%;
     background-color: white;
     margin-top: 10px;
     display: flex;
     flex-direction: column;
+    padding: 0 10px;
 }
 
 .registers {
+    display: flex;
     background-color: transparent;
     font-size: 15px;
     border: none;
@@ -68,16 +64,17 @@
     min-width: 300px;
 }
 
-.main .options {
-    max-width: 100vw;
-    margin-right: 350px;
+.options {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px 300px 0;
 }
 
-.main button {
+button {
     padding: 15px;
     margin: 0px 15px;
-    position: relative;
-    left: 40%;
 }
 
 .data-in-input {
