--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -79,6 +79,8 @@ button {
 
 .data-in-input {
     border: none;
+    outline: none;
+    background-color: transparent;
     padding: 0;
     margin: 0;
     text-decoration: none;
